# Car_Counter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  modal_app.py  pyproject.toml
.claude/: launch.json
app/: jobs.py  live.py  main.py  pipeline.py  schemas.py
design/: car-counter-dashboard-blue.html  car-counter-dashboard.html
design/design_handoff_car_counter_ui/: README.md
design/design_handoff_car_counter_ui/reference/: car-counter-app-reference.html  theme-tokens.css
static/: app.js  index.html  style.css
